vehicle/tests/golden/error/scoping/recordFieldMultipleErrors/spec.vcl
record Test where
  { f1 : Real
  , f2 : Real
  }

example : Test
example = { f = 2, g2 = 2 }
